--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav nav ml-auto">
 	          <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
-	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
+	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>Introduction</span></a></li>
 	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Education</span></a></li>
 	          <li class="nav-item"><a href="#services-section" class="nav-link"><span>Research</span></a></li>
 	          <li class="nav-item"><a href="#contact-section" target='None' class="nav-link"><span>Contact</span></a></li>
@@ -58,20 +58,19 @@
     			<div class="col-md-9 col-lg-9 pl-md-5 py-5">
     				<div class="row justify-content-start pb-3">
 		          <div class="col-md-12 heading-section ftco-animate">
-		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">A brief introduction</h2>
 		            <p> I am a visiting project student at the Aryabhatta Research Institute of observational Sciences (<a href="https://www.aries.res.in/"target=None>ARIES</a>). I was born in  Paithan, Aurangabad, Maharashtra. I obtained my B. Sc. degree from the <a href="https://kjssc.somaiya.edu.in"> K J Somaiya College of Science & Commerce </a> and M. Sc. degree from the Department of Physics, University of Mumbai (<a href="https://www.mu.ac.in/physics" target=None> UDP </a>). This website is my personal space where one may find articles/information related to my research, sometimes aimed for general understanding.
 Besides astronomy, I spend my time traveling, reading books, writing random things and discovering new technological advances. Since childhood, I have been fascinated by travel and thus, traveling has been one of my primary hobbies. I love writing travel articles based on my experiences!
 I'd like to hear from people who visit my page. You can use the social media buttons in the <a href="#contact-section"> contact section</a>.
 </p>
 ​
-<img src="ganesh1076.github.io/images/profile.jpeg" width="30%"; height=auto>
+<img src="images/profile.jpg" width="30%"; height=auto>
 
 
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
               	<p class="mb-4">
-                <p><a href="ganesh1076.github.io/images/Ganesh__CV.pdf" class="btn btn-primary py-3 px-3">Download CV</a></p>
+                <p><a href="images/Ganesh__CV.pdf" class="btn btn-primary py-3 px-3">Download CV</a></p>
               </div>
 	          </div>
 	        </div>
