--- a/index1.html
+++ b/index1.html
@@ -1,31 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-
-    <script data-ad-client="ca-pub-3631038205935273" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-      <link rel="icon"
-      type="image/png"
-      href="images/logo.png">
-    <title>Ganesh Pawar: Home</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-
-    <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
-    <link rel="stylesheet" href="css/animate.css">
-
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/magnific-popup.css">
-
-    <link rel="stylesheet" href="css/aos.css">
-
-    <link rel="stylesheet" href="css/ionicons.min.css">
-
-    <link rel="stylesheet" href="css/flaticon.css">
-    <link rel="stylesheet" href="css/icomoon.css">
-    <link rel="stylesheet" href="css/style.css">
+  <title>Ganesh Pawar: Home</title>
+  
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 
@@ -59,9 +36,7 @@
     				<div class="row justify-content-start pb-3">
 		          <div class="col-md-12 heading-section ftco-animate">
 		            <h2 class="mb-4">A brief introduction</h2>
-		            <p> I am a visiting project student at the Aryabhatta Research Institute of observational Sciences (<a href="https://www.aries.res.in/"target=None>ARIES</a>). I was born in  Paithan, Aurangabad, Maharashtra. I obtained my B. Sc. degree from the <a href="https://kjssc.somaiya.edu.in"> K J Somaiya College of Science & Commerce </a> and M. Sc. degree from the Department of Physics, University of Mumbai (<a href="https://www.mu.ac.in/physics" target=None> UDP </a>). This website is my personal space where one may find articles/information related to my research, sometimes aimed for general understanding.
-Besides astronomy, I spend my time traveling, reading books, writing random things and discovering new technological advances. Since childhood, I have been fascinated by travel and thus, traveling has been one of my primary hobbies. I love writing travel articles based on my experiences!
-I'd like to hear from people who visit my page. You can use the social media buttons in the <a href="#contact-section"> contact section</a>.
+		            <p> I am a visiting project student at the Aryabhatta Research Institute of observational Sciences (<a href="https://www.aries.res.in/"target=None>ARIES</a>). I was born in  Aurangabad, Maharashtra on August 15, 1997. I obtained my B.Sc. degree from the <a href="https://kjssc.somaiya.edu.in"> K J Somaiya College of Science & Commerce </a> and M.Sc. degree from the Department of Physics, University of Mumbai (<a href="https://www.mu.ac.in/physics" target=None> UDP </a>). This website is my personal space where one may find articles/information related to my research, sometimes aimed for general understanding. Besides astronomy, I spend my time in watching movies, reading books, trekking and exploring to find or solve problems. I'd like to hear from people if they have any advice or some questions. You can use the social media buttons in the <a href="#contact-section"> contact section</a>.
 </p>
 ​
 <img src="images/profile.jpg" width="30%"; height=auto>
@@ -89,7 +64,8 @@ I'd like to hear from people who visit my page. You can use the social media but
 					      <li><a href="#page-1">Education</a></li>
 					      <li><a href="#page-2">Experience</a></li>
 					      <li><a href="#page-3">Skills</a></li>
-					      <li><a href="#page-4">Awards</a></li>
+<!--					      <li><a href="#page-4">Awards</a></li>
+-->
 					    </ul>
 					  </nav>
 					</div>
@@ -160,12 +136,12 @@ I'd like to hear from people who visit my page. You can use the social media but
 
 		    					<h2>Computer Skills</h2>
 
-		    					<p>I am fluent in the usage of Python language for the general programming purposes. I use astropy affiliated packages like <a href="https://ccdproc.readthedocs.io/en/latest/"target=None>CCDPROC</a> and <a href="https://photutils.readthedocs.io/en/stable/"target=None>PHOTUTILS </a> for the optical data reduction procedures. I use the mcmc based code <a href="https://github.com/nye17/javelin"target=None>EMCEE </a> extensively.
-                    I have been implementing <a href="https://nbviewer.jupyter.org/"target=None> Jupyter-notebooks </a> for most of the projects as
+		    					<p>I am fluent in the usage of Python language for the general programming purposes. I use astropy affiliated packages like <a href="https://specutils.readthedocs.io/"target=None>specutils</a> and <a href="https://astroquery.readthedocs.io/"target=None>astroquery </a>. 
+<!--                    I have been implementing <a href="https://nbviewer.jupyter.org/"target=None> Jupyter-notebooks </a> for most of the projects as
                     I feel the notebook-based implementation is the most transparent and easy way for codes to work.
-                    I use <a href="http://github.com/ganesh1076" target=None> GitHub </a>  for keeping the codes together and as a version control system for my projects. Besides Python based packages,
-                    I have some experience programming with C++ as well.
-                    </p>
+-->
+                    I use <a href="http://github.com/ganesh1076" target=None> GitHub </a>  for keeping the codes together and as it is also easier for other collabators to make changes and pull a branch with significant development. Moreever, I have some experience programming with C++ as well.
+</p>
 
 
             <div class="icon d-flex align-items-center justify-content-center">
@@ -184,18 +160,17 @@ I'd like to hear from people who visit my page. You can use the social media but
              <h2>Telescope experience</h2>
 
                    <p> I have observed using the telescopes located at ARIES, namely, the <a href="https://www.aries.res.in/facilities/astronomical-telescopes/13m-telescope"target=None> 1.3m DFOT </a> and <a href="https://www.aries.res.in/facilities/astronomical-telescopes/36m-telescope"targe=None> 3.6m DOT </a>.
-                     Besides these telescopes, I have observed remotely using the network of <a href="https://www.iiap.res.in/iao/iao.html"target=None> 2.01-m Himalayan Chandra Telescope (HCT)</a> located in Hanle, India. I have the experience of reducing and analysing the data obtained from these teelscopes. We are developing an spectroscopy pipeline for  <a href="http://igo.iucaa.in/"target=None>2-m IUCAA Girawali Observatory (IGO)</a>  and HCT , written purely in PYTHON. The details will be soon available <!--can be found--> <a href=""target=None> here.</a> . 
+                     Besides these telescopes, I have observed remotely using the network of 2.01-m Himalayan Chandra Telescope <a href="https://www.iiap.res.in/iao/iao.html"target=None>  (HCT)</a> Hanle, India. I have the experience of reducing and analysing the data obtained from these telescopes. We are developing an spectroscopy data reduction pipeline for 2-m IUCAA Girawali Observatory  <a href="http://igo.iucaa.in/"target=None>(IGO)</a>  and <a href="https://www.iiap.res.in/iao/iao.html"target=None>HCT</a> , written in python. The details will be soon available <!--can be found--> <a href=""target=None> here.</a> 
 
 
     <section class="ftco-section" id="services-section">
     	<div class="container-fluid px-md-5">
     		<div class="row justify-content-center py-5 mt-5">
           <div class="col-md-8 heading-section text-center ftco-animate">
-          	<h1 class="big big-2">Research</h1>
             <h2 class="mb-4">Research</h2>
-            <p>My research is currently focused on the stellar activity of ‘B, A and F’ type stars using TESS data to determine the pulsation frequency. I am also reducing spectroscopic data of ‘Be’ stars taken from IUCAA Girawali Observatory by writing python codes to extract a Continuum normalized spectrum to check the line variation, we are also using synthetic
-spectra to find the physical parameters like Teff, projected rotational velocity, logg, etc. I have just started reducing the physical parameters from
-high-resolution spectroscopy using HERMES data.</p>
+            <p>My research is currently focused on the stellar activity of ‘B, A and F’ type stars using TESS data to determine the pulsation frequency. I am also studying spectroscopic data of ‘Be’ stars taken from IGO by checking the line variation and we are also using synthetic spectra to find the physical parameters like Teff, projected rotational velocity, logg, etc. </p>
+            <p>
+I have started reducing the physical parameters from high-resolution spectroscopy using iSpec code with HERMES data.</p>
 
       </section>
 
@@ -233,21 +208,6 @@ high-resolution spectroscopy using HERMES data.</p>
 
                 <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
       Copyright &copy;<script> document.write(new Date().getFullYear());</script> Ganesh Pawar. All rights reserved </p>
-
-  <script src="js/jquery.min.js"></script>
-  <script src="js/jquery-migrate-3.0.1.min.js"></script>
-  <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/jquery.easing.1.3.js"></script>
-  <script src="js/jquery.waypoints.min.js"></script>
-  <script src="js/jquery.stellar.min.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/jquery.magnific-popup.min.js"></script>
-  <script src="js/aos.js"></script>
-  <script src="js/jquery.animateNumber.min.js"></script>
-  <script src="js/scrollax.min.js"></script>
-
-  <script src="js/main.js"></script>
 
   </body>
 </html>
