--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-Hi Ganesh Pawar here! main site is under maintenance, meanwhile you can visit a basic html version click (<a href="profile.html" target=None> here </a>)
+Hi Ganesh Pawar here! 
+main site is under maintenance, meanwhile you can still visit a basic HTML version click (<a href="profile.html" target=None> here </a>)
