--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 Hi Ganesh Pawar here! 
-main site is under maintenance, meanwhile you can still visit a basic HTML version click (<a href="profile.html" target=None> here </a>)
+<p> main site is under maintenance, meanwhile you can still visit a basic HTML version click (<a href="profile.html" target=None>here</a>) </p>
