--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date"></span>
-		    					<h2>Research Intern (February, 2021 - July, 2021) </h2>
+		    					<h2>Visiting Project Stuent (February, 2021 - July, 2021) </h2>
 		    					<span class="position">Aryabhatta Research Institute of observational sciencES (ARIES)</span>
 		    					<p>6 month internship project as part of Visiting Student Project. Project titled- Stellar activity of B, A and F-type stars. Supervised by: <a href="https://www.aries.res.in/santosh/"target=None>Dr. Santosh Joshi.</a></p>
 		    				</div>
