--- a/projects.html
+++ b/projects.html
@@ -110,15 +110,16 @@
       </div>
     </div>
     <h6 class="font-italic mt-2 mt-sm-0">The δ Scuti star are population I pulsating stars, they lies in classical instability strip with mass ranges from 1.5-2.5M<sub>&#8857;</sub>. They are short period variables with periods in the range 18 min to 8 hr. AD CMi is the high amplitude δ Scuti
-stars (HADS). The below light curve is from our observation with a period of 2.513 hour. </h6>
+stars (HADS). The below light curve is from our observation with a period of 2.513 hour. 
          <img src="./assets/img/ad_cmi_lc.jpeg" alt="AD CMi lightcurve" style="width:100%;height:400px;" /> 
-	
+	</h6>
   </div>
 </div>
 
   
   
-  
+
+<!--   
 
     <ul class="card-text font-weight-light list-group list-group-flush">
       <li class="list-group-item">○ Around 30 people saw the Jupiter and Saturn in a single eyepiece field of view, including young school childrens who was very interested to observe.
@@ -168,8 +169,7 @@ stars (HADS). The below light curve is from our observation with a period of 2.5
           </div>
         </div>
       </a>
- 
-<!--      -->
+      -->
     </div>
   
 </div>
