--- a/outreach.html
+++ b/outreach.html
@@ -114,7 +114,7 @@
       </div>
     </div>
     <h6 class="font-italic mt-2 mt-sm-0">Observing the great conjunction with Akashmitra for local residence</h6>
-         <img src="./assets/img/ad_cmi_lc.png" alt="Conjunction of Jupiter and Saturn" style="width:400px;height:400px;"> 
+         <img src="./assets/img/Jupiter_Saturn_conjunction1.jpg" alt="Conjunction of Jupiter and Saturn" style="width:400px;height:400px;"> 
 	 <img src="./assets/img/Jupiter_Saturn_conjunction.jpg" alt="Conjunction of Jupiter and Saturn" style="width:345px;height:400px;"> 
 
     <ul class="card-text font-weight-light list-group list-group-flush">
