--- a/cv.html
+++ b/cv.html
@@ -102,7 +102,7 @@
 <!-- Place PDF download link at the top right. -->
 
 <div class="row" style="margin-top: -3.5em;">
-	<a class="ml-auto mr-2" href="#preload_cv" target="_self">
+	<a class="ml-auto mr-2" href="#cv" target="_self">
 	  <img height="60px" src="./assets/img/pdf_icon.svg" />
 	</a>
 </div>
@@ -835,11 +835,13 @@
 </div>
 
 
-	<div class="card mt-3 p-3" id="preload_cv">
+	<div class="card mt-3 p-3" id="cv">
 	<article id="cv" class="panel">
 					
-	  <iframe src="https://drive.google.com/file/d/1FjMfg2Q871naGFlkF0gfTFWKFAOM_vU8/preview" width="100%" height="850px">
-	  </iframe>							
+	  <iframe sandbox="allow-scripts allow-forms allow-same-origin" src="https://drive.google.com/file/d/1FjMfg2Q871naGFlkF0gfTFWKFAOM_vU8/preview" width="100%" height="687px" frameborder="0" scrolling="no" seamless="">
+	  </iframe>
+	  <div style="width: 80px; height: 80px; position: absolute; opacity: 0; right: 0px; top: 0px;"> </div>
+	  							
 	</article>
 	</div>
   
