--- a/outreach.html
+++ b/outreach.html
@@ -140,7 +140,7 @@
     
     </div>
     <ul class="card-text font-weight-light list-group list-group-flush">
-      <li class="list-group-item">○ Annular solar eclipse 2019 was observed from kannur,India along with 40 Akashmitra and explain them about the eclipses.</li>
+      <li class="list-group-item">○ Annular solar eclipse 2019 was observed from kannur, Kerala, India along with 40 Akashmitra and we explain them the difference between the total and annular solar eclipses.</li>
       </ul>
 
 	<img src="./assets/img/ASE_2019_group.jpg" alt="ASE Group" style="width:330px;height:250px;"> 
