--- a/projects.html
+++ b/projects.html
@@ -110,7 +110,7 @@
       </div>
     </div>
     <h6 class="font-italic mt-2 mt-sm-0">The δ Scuti stars are population-I pulsating stars, they lies in classical instability strip with mass ranges from 1.5-2.5M<sub>&#8857;</sub>. It has a short period of variability, ranges from 18 min to 8 hr. AD CMi is the high amplitude δ Scuti
-stars (HADS). The below light curve is a result of our team efforts with a period of 2.513 hr. 
+stars (HADS). The below light curve is a result of our team's effort with a period of 2.513 hr. 
          <img src="./assets/img/ad_cmi_lc.png" alt="AD CMi lightcurve" style="width:100%;height:400px;" /> 
 	</h6>
   </div>
