--- a/projects.html
+++ b/projects.html
@@ -116,6 +116,11 @@
     <h6 class="font-italic mt-2 mt-sm-0">The δ Scuti stars are population-I pulsating stars, they lies in classical instability strip with mass ranges from 1.5-2.5M<sub>&#8857;</sub>. It has a short period of variability, ranges from 18 min to 8 hr. AD CMi is the high amplitude δ Scuti
 stars (HADS). The below light curve is a result of our team's effort (Akashmitra Mandal) and it has a period of 2.513 hr.</h6>
 	 <img src="./assets/img/ad_cmi_lc.jpeg" alt="AD CMi lightcurve" style="width:100%;height:350px;"> 
+	  <ul class="card-text font-weight-light list-group list-group-flush">
+      <li class="list-group-item">○ Around 30 people saw the Jupiter and Saturn in a single eyepiece field of view, including young school childrens who was very interested to observe.
+      <li class="list-group-item">○ Few of our members captured this event with their DSLR camera, which we later shared it on our social media to the people who can't join us that day. </li>
+    </ul>
+  
 	
     
   </div>
