--- a/projects.html
+++ b/projects.html
@@ -115,7 +115,7 @@
     </div>
     <h6 class="font-italic mt-2 mt-sm-0">The δ Scuti stars are population-I pulsating stars, they lies in classical instability strip with mass ranges from 1.5-2.5M<sub>&#8857;</sub>. It has a short period of variability, ranges from 18 min to 8 hr. AD CMi is the high amplitude δ Scuti
 stars (HADS). The below light curve is a result of our team's effort (Akashmitra Mandal) and it has a period of 2.513 hr.</h6>
-	 <img src="./assets/img/ad_cmi_lc.jpg" alt="AD CMi lightcurve" style="width:345px;height:400px;"> 
+	 <img src="./assets/img/ad_cmi_lc.jpg" alt="AD CMi lightcurve" style="width:100%;height:350px;"> 
 	  <img src="./assets/img/Jupiter_Saturn_conjunction.jpg" alt="Conjunction of Jupiter and Saturn" style="width:345px;height:400px;"> 
 
 	  <ul class="card-text font-weight-light list-group list-group-flush">
