--- a/outreach.html
+++ b/outreach.html
@@ -116,7 +116,7 @@
     <h6 class="font-italic mt-2 mt-sm-0">Observing the great conjunction with Akashmitra for local residence</h6>
          <img src="./assets/img/Jupiter_Saturn_conjunction1.jpg" alt="Conjunction of Jupiter and Saturn" style="width:400px;height:400px;"> 
 	 <img src="./assets/img/Jupiter_Saturn_conjunction.jpg" alt="Conjunction of Jupiter and Saturn" style="width:345px;height:400px;"> 
-	  <img src="./assets/img/ad_cmi_lc.jpg" alt="AD CMi lightcurve" style="width:100%;height:350px;"> 
+	  <img src="./assets/img/ad_cmi_lc.jpg" alt="AD CMi lightcurve" style="width:345px;height:400px;"> 
 	
 
     <ul class="card-text font-weight-light list-group list-group-flush">
