--- a/projects.html
+++ b/projects.html
@@ -105,6 +105,28 @@
   <div class="p-2">
     <div class="row">
       <div class="col-sm-10">
+        <h5 class="font-weight-bold">Forward model of a Heartbeat star using PHOEBE</h5>
+      </div>
+      <div class="col-sm-2 text-left text-sm-right">
+        <span class="badge font-weight-bold danger-color-dark darken-1 text-uppercase align-middle" href="" target="_blank">
+            Oct. 15, 2021
+        </span>
+      </div>
+    </div>
+    <h6 class="font-italic mt-2 mt-sm-0">PHysics Of Eclipsing BinariEs (PHOEBE) is an eclipsing binary modeling code written in python with great documentation.</h6>
+
+	 <img src="assets/img/eccentric_ellipsoidal.gif" alt="Heartbeat star" style="width:400px;height:300px;"/>
+
+    
+  </div>
+</div>
+
+
+
+<div class="card mt-3">
+  <div class="p-2">
+    <div class="row">
+      <div class="col-sm-10">
         <h5 class="font-weight-bold">DSLR photometry of AD CMi, a δ Scuti variable star</h5>
       </div>
       <div class="col-sm-2 text-left text-sm-right">
@@ -115,13 +137,13 @@
     </div>
     <h6 class="font-italic mt-2 mt-sm-0">The δ Scuti stars are population-I pulsating stars, they lies in classical instability strip with mass ranges from 1.5-2.5M<sub>&#8857;</sub>. It has a short period of variability, ranges from 18 min to 8 hr. AD CMi is the high amplitude δ Scuti
 stars (HADS). The below light curve is a result of our team's effort (Akashmitra Mandal) and it shows a period of 2.513 hr.</h6>
-	 <img src="assets/img/ad_cmi_lc.jpg" alt="AD CMi lightcurve" style="width:100%;height:350px;"> </img>
+	 <img src="assets/img/ad_cmi_lc.jpg" alt="AD CMi lightcurve" style="width:100%;height:350px;"/>
 
-
-	
     
   </div>
 </div>
+
+
 
 
 
