--- a/projects.html
+++ b/projects.html
@@ -115,7 +115,7 @@
     </div>
     <h6 class="font-italic mt-2 mt-sm-0">PHysics Of Eclipsing BinariEs (PHOEBE) is an eclipsing binary modeling code written in python with great documentation.</h6>
 
-	 <img src="assets/img/eccentric_ellipsoidal.gif" alt="Heartbeat star" style="width:400px;height:300px;"/>
+	 <img src="assets/img/eccentric_ellipsoidal.gif" alt="Heartbeat star" style="width:55%;height:80%;"/>
 
     
   </div>
