--- a/outreach.html
+++ b/outreach.html
@@ -114,8 +114,8 @@
       </div>
     </div>
     <h6 class="font-italic mt-2 mt-sm-0">Observing the great conjunction with Akashmitra for local residence</h6>
-         <img src="./assets/img/Jupiter_Saturn_conjunction1.jpg" alt="Conjunction of Jupiter and Saturn" style="width:400px;height:400px;"/> 
-	 <img src="./assets/img/Jupiter_Saturn_conjunction.jpg" alt="Conjunction of Jupiter and Saturn" style="width:345px;height:400px;"/> 
+         <img src="./assets/img/Jupiter_Saturn_conjunction1.jpg" alt="Conjunction of Jupiter and Saturn" style="width:52%;height:65%;"/> 
+	 <img src="./assets/img/Jupiter_Saturn_conjunction.jpg" alt="Conjunction of Jupiter and Saturn" style="width:45%;height:65%;"/> 
 
     <ul class="card-text font-weight-light list-group list-group-flush">
       <li class="list-group-item">○ Around 30 people saw the Jupiter and Saturn in a single eyepiece field of view, including young school childrens who was very interested to observe.
@@ -143,9 +143,9 @@
       <li class="list-group-item">○ Annular solar eclipse 2019 was observed from kannur, Kerala, India along with 40 Akashmitra and we explain them the difference between the total and annular solar eclipses.</li>
       </ul>
 
-	<img src="./assets/img/ASE_2019_group.jpg" alt="ASE Group" style="width:330px;height:250px;"> 
+	<img src="./assets/img/ASE_2019_group.jpg" alt="ASE Group" style="width:40%;height:70%;"> 
 	
-	<img src="./assets/img/ASE_2019.jpeg" alt="ASE" style="width:400px;height:250px;"> 
+	<img src="./assets/img/ASE_2019.jpeg" alt="ASE" style="width:58%;height:70%;"> 
 	
 
     
@@ -167,14 +167,14 @@
     <ul class="card-text font-weight-light list-group list-group-flush">
       <li class="list-group-item">○ Pluto's enigmatic atmosphere by stellar occultation.</li>
 
-	<iframe width="740" height="400" src="https://www.youtube.com/embed/ijNtW0Ywn9E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<iframe width="98%" height="400" src="https://www.youtube.com/embed/ijNtW0Ywn9E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
       <li class="list-group-item">○ Few other occultations of bright stars.</li>    
     </ul>
 
-	<iframe width="365" height="250" src="https://www.youtube-nocookie.com/embed/ZhOlpkX758w?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<iframe width="49%" height="250" src="https://www.youtube-nocookie.com/embed/ZhOlpkX758w?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       
-	<iframe width="365" height="250" src="https://www.youtube-nocookie.com/embed/4P51WET3NVY?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<iframe width="49%" height="250" src="https://www.youtube-nocookie.com/embed/4P51WET3NVY?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
  
   </div>
 </div>
