--- a/projects.html
+++ b/projects.html
@@ -113,7 +113,7 @@
         </span>
       </div>
     </div>
-    <h6 class="font-italic mt-2 mt-sm-0">PHysics Of Eclipsing BinariEs (PHOEBE) is an eclipsing binary modeling code written in python with great documentation.</h6>
+    <h6 class="font-italic mt-2 mt-sm-0">PHysics Of Eclipsing BinariEs (PHOEBE) is an eclipsing binary modeling code written in python with a great documentation.</h6>
 
 	 <img src="assets/img/eccentric_ellipsoidal.gif" alt="Heartbeat star" style="width:55%;height:80%;"/>
 
