--- a/projects.html
+++ b/projects.html
@@ -101,6 +101,30 @@
 <h3 class="mt-3">The Great Conjunction</h3> 
 -->
 
+
+
+<div class="card mt-3">
+  <div class="p-2">
+    <div class="row">
+      <div class="col-sm-10">
+        <h5 class="font-weight-bold">Corner plot of an Eclipsing Binaries</h5>
+      </div>
+      <div class="col-sm-2 text-left text-sm-right">
+        <span class="badge font-weight-bold danger-color-dark darken-1 text-uppercase align-middle" href="" target="_blank">
+            Dec. 07, 2021
+        </span>
+      </div>
+    </div>
+    <h6 class="font-italic mt-2 mt-sm-0">It is shows the uncretainity in our models and fit with the corelation in parameter space. This is just a sample with a few hundreds of iterations, uncreatainity can be reduce by increasing number of iterations to a few 10's of thousand but it is computationally expensive.</h6>
+	 <img src="assets/img/mcmc_derived_corner.jpg" alt="mcmc output" style="width:100%;height:90%;"/>
+
+    
+  </div>
+</div>
+
+
+
+
 <div class="card mt-3">
   <div class="p-2">
     <div class="row">
@@ -142,7 +166,6 @@ stars (HADS). The below light curve is a result of our team's effort (Akashmitra
     
   </div>
 </div>
-
 
 
 
