--- a/projects.html
+++ b/projects.html
@@ -115,7 +115,7 @@
         </span>
       </div>
     </div>
-    <h6 class="font-italic mt-2 mt-sm-0">It is shows the uncretainity in our models and fit with the corelation in parameter-space. This is just a sample with a few hundreds of iterations, uncreatainity can be reduce by increasing number of iterations to a few 10's of thousand but it is computationally expensive.</h6>
+    <h6 class="font-italic mt-2 mt-sm-0">It is shows the uncretainity in our models and fit with the corelation in parameter-space. This is just a sample with a few hundreds of iterations, uncreatainity can be reduce by increasing number of iterations to a few 10's of thousand but it is computationally very expensive.</h6>
 	 <img src="assets/img/mcmc_derived_corner.jpg" alt="mcmc output" style="width:100%;height:90%;"/>
 
     
