--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <a href="mailto:pawarganesh1076@gmail.com"><i class="fa fa-envelope"></i></a>
             <a href="https://scholar.google.com/citations?user=IMjtDEoAAAAJ&hl=en" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar"></i></a>
             <a href="https://www.github.com/ganesh1076" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+            <a href="https://orcid.org/0000-0003-3639-9052" target="_blank" title="ORCID"><i class="ai ai-orcid"></i></a>
             <a href="https://www.linkedin.com/in/pawarganesh1076" target="_blank" title="LinkedIn"><i class="fa fa-linkedin"></i></a>
             <a href="https://twitter.com/pawarganesh1076" target="_blank" title="Twitter"><i class="fa fa-twitter"></i></a>
             <a href="https://www.instagram.com/ganesh_pawar1076/" class="fa fa-instagram"></a>
