--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <p>
 	My research is currently focused on the stellar activity of ‘B, A and F’ type stars using TESS data to determine the pulsation frequency. I am also studying spectroscopic data of ‘Be’ stars taken from IGO by checking their line variation and we are also using synthetic spectra to determine the physical parameters like T<sub>eff</sub>, projected rotational velocity, logg, etc. </p>
             <p>
-I have also started reducing the physical parameters from high-resolution spectroscopy using iSpec with HERMES data.</p>
+I have also started reducing the stellar abundances from high-resolution spectroscopy data from HERMES spectrograph using iSpec and BinMag.</p>
 
     </div>
 </div>
