--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 	I am an amateur astronomer, I was born in  Aurangabad, Maharashtra on August 15, 1997. I obtained my B.Sc. degree from the K J Somaiya College of Science & Commerce (<a href="https://kjssc.somaiya.edu.in">KJSSC</a>) and M.Sc. degree from the Department of Physics, University of Mumbai (<a href="https://www.mu.ac.in/physics" target=None>UDP</a>). I was also a visiting project student at the Aryabhatta Research Institute of observational Sciences (<a href="https://www.aries.res.in/"target=None>ARIES</a>).
 	</p>
         
-        <p>This website is my personal space where one may find articles/information related to my research and outreach, sometimes aimed for general understanding. Besides astronomy, I spend my time in watching movies, reading books, outreach activities, trekking and exploring and solving problems. I'd like to hear from people if they have any advice or a query or a job. You can use the above social media buttons.
+        <p>This website is my personal space where one may find articles/information related to my research and outreach, sometimes aimed for general understanding. Besides astronomy, I spend my time in watching movies, reading books, outreach activities, trekking and solving and exploring problems. I'd like to hear from people if they have any advice or a query or a job. You can use the above social media buttons.
         </p>
         
         <p>
