--- a/cv.html
+++ b/cv.html
@@ -931,7 +931,7 @@
 	<div class="card mt-3 p-3" id="cv">
 	<article id="cv" class="panel">
 					<!-- https://drive.google.com/file/d/1FjMfg2Q871naGFlkF0gfTFWKFAOM_vU8/preview-->
-	  <iframe sandbox="allow-scripts allow-forms allow-same-origin" src="https://www.overleaf.com/download/project/60884da8faec8402dfa24bce/build/1852b3ad62b-fa25a9a46f711f43/output/output.pdf?compileGroup=standard&clsiserverid=clsi-pre-emp-e2-c-f-dtxw&enable_pdf_caching=true&preview" width="100%" height="687px" frameborder="0" scrolling="no" seamless="">
+	  <iframe sandbox="allow-scripts allow-forms allow-same-origin" src="https://drive.google.com/file/d/1FjMfg2Q871naGFlkF0gfTFWKFAOM_vU8/preview" width="100%" height="687px" frameborder="0" scrolling="no" seamless="">
 	  </iframe>
 	  <div style="width: 80px; height: 80px; position: absolute; opacity: 0; right: 0px; top: 0px;"> </div>
 	  							
