--- a/projects.html
+++ b/projects.html
@@ -102,6 +102,31 @@
 -->
 
 
+<div class="card mt-3">
+  <div class="p-2">
+    <div class="row">
+      <div class="col-sm-10">
+        <h5 class="font-weight-bold">Poster presented at PLATO Stellar Science Conference</h5>
+      </div>
+      <div class="col-sm-2 text-left text-sm-right">
+        <span class="badge font-weight-bold danger-color-dark darken-1 text-uppercase align-middle" href="" target="_blank">
+            June 26-30, 2023
+        </span>
+      </div>
+    </div>
+	 <iframe sandbox="allow-scripts allow-forms allow-same-origin" src="https://drive.google.com/file/d/1kMprNtkoNp-xoWwsvO3WZ-x1ClpuH9X3/preview" width="100%" height="1050px" frameborder="0" scrolling="no" seamless="">
+  </iframe>
+  <div style="width: 80px; height: 80px; position: absolute; opacity: 0; right: 0px; top: 0px;"> </div>
+
+
+    
+  </div>
+</div>
+
+
+
+
+
 
 <div class="card mt-3">
   <div class="p-2">
