--- a/cv.html
+++ b/cv.html
@@ -586,7 +586,7 @@
 
 					<div class="col-sm-12 text-left text-sm-right">
         <span class="badge font-weight-bold danger-color-dark darken-1 text-uppercase align-right" href="" target="_blank">
-            Center for Interdisciplinary Exploration and Research in Astrophysics (CIERA), Northwestern University
+            CIERA, Northwestern University, Evanston, Illionis
         </span>
       </div>								<h6 																<h6 class="title font-weight-bold ml-1 ml-md-4"><b>Code/Astro Workshop 2023</b></h6>
     								</li>
