--- a/projects.html
+++ b/projects.html
@@ -98,7 +98,8 @@
   <h6>This page is under construction</h6>
 
 <!--
-<h3 class="mt-3">The Great Conjunction</h3> 
+<h3 class="mt-3">The Great Conjunction </h3> 
+<a href="https://doi.org/10.5281/zenodo.8096874"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.8096874.svg" alt="DOI"></a>
 -->
 
 
@@ -114,8 +115,10 @@
         </span>
       </div>
     </div>
+    <a href="https://doi.org/10.5281/zenodo.8096874"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.8096874.svg" alt="DOI"></a>
 	 <iframe sandbox="allow-scripts allow-forms allow-same-origin" src="https://drive.google.com/file/d/1kMprNtkoNp-xoWwsvO3WZ-x1ClpuH9X3/preview" width="100%" height="1050px" frameborder="0" scrolling="no" seamless="">
   </iframe>
+  
   <div style="width: 80px; height: 80px; position: absolute; opacity: 0; right: 0px; top: 0px;"> </div>
 
 
