--- a/index.html
+++ b/index.html
@@ -127,12 +127,16 @@
         </div>
 
         <p>
-	I am a PhD student at Centrum Astronomiczne im. M. Kopernika PAN (<a href="https://www.camk.edu.pl/en/">CAMK</a>, <a href="https://www.ncac.torun.pl/?lang=pl&branch=world&id=17">Toruń</a>) working with <a href="https://www.ncac.torun.pl/~xysiek/en/indexen.html"> Prof. Krzysztof Hełminiak</a>. My research focuses on understanding the fundamental properties of Detached Eclipsing Binary stars (DEBs). Eclipsing Binary stars (EBs) are gravitationally bounded stars that eclipses each other like our Sun-Moon eclipses. These EBs can act as Benchmark Stars to give us stellar measurements with very high accuracy and precision which helps to constrain the theoretical stellar models.
+	I am a PhD student at Centrum Astronomiczne im. M. Kopernika PAN (<a href="https://www.camk.edu.pl/en/">CAMK</a>, <a href="https://www.ncac.torun.pl/?lang=pl&branch=world&id=17">Toruń</a>) working with <a href="https://www.ncac.torun.pl/~xysiek/en/indexen.html"> Prof. Krzysztof Hełminiak</a>. 
+  My research focuses on understanding the fundamental properties of Detached Eclipsing Binary stars (DEBs). Eclipsing Binary stars (EBs) are gravitationally bounded stars that eclipses each other like our Sun-Moon eclipses. 
+  These EBs can serve as ideal Benchmark Stars for testing stellar models and calibrating data analysis algorithms in future surverys like ESA's <a href="https://www.esa.int/Science_Exploration/Space_Science/Plato">PLATO</a> misson.
 	</p>
   
-      <p>I graduated with my B.Sc. degree from the K J Somaiya College of Science & Commerce (<a href="https://kjssc.somaiya.edu.in">KJSSC</a>) and M.Sc. degree from the Department of Physics, University of Mumbai (<a href="https://www.mu.ac.in/physics" target=None>UDP</a>). I was also a visiting project student at the Aryabhatta Research Institute of observational Sciences (<a href="https://www.aries.res.in/"target=None>ARIES</a>).   
+      <p>I graduated with my B.Sc. degree from the K J Somaiya College of Science & Commerce (<a href="https://kjssc.somaiya.edu.in">KJSSC</a>) and M.Sc. degree from the Department of Physics, University of Mumbai (<a href="https://www.mu.ac.in/physics" target=None>UDP</a>). 
+        I was also a visiting project student at the Aryabhatta Research Institute of observational Sciences (<a href="https://www.aries.res.in/"target=None>ARIES</a>).   
       </p>
-        <p>This website is my personal space where one may find articles/information related to my research and outreach, sometimes aimed for general understanding. Besides astronomy, I like to spend my time in watching movies, reading books, outreach activities, trekking and solving and exploring problems. I'd like to hear from people if they have any query, advice, or a job. You can use the above social media buttons.
+        <p>This website is my personal space where one may find articles/information related to my research and outreach, sometimes aimed for general understanding. Besides astronomy, I like to spend my time in watching movies, reading books, outreach activities, trekking and solving and exploring problems.
+           I'd like to hear from people if they have any query, advice, or a job. You can use the above social media buttons.
         </p>
         
   <!--      <p>   August 15, 1997.
