obs run edited in cv

--- a/cv.html
+++ b/cv.html
@@ -638,7 +638,7 @@
 													<span class="item">20-cm Robotic telescope of Akashmitra Mandal with small projects in amateur astronomy like 
 														stellar photometry of short-period <a href="./projects.html" target="">variable stars</a> (8-11 mag), 
 														astrometry of <a href="https://ui.adsabs.harvard.edu/abs/2019JDSO...15..193D/abstract" target="_blank">double stars</a>  as well as high proper motion targets
-														 and <a href="./outreach.html" target="">stellar occultations</a> 
+														 and <a href="./outreach.html" target="">stellar occultations by asteroid</a> 
 
 													</span>
 												
