--- a/publications.html
+++ b/publications.html
@@ -98,6 +98,11 @@
   <!--
   <h6><nobr><em>*</em></nobr> denotes equal contribution and joint lead authorship.</h6>
 -->
+<div class="row" style="margin-top: -3.5em;">
+	<a class="ml-auto mr-2" href="https://ui.adsabs.harvard.edu/search/p_=0&q=author%3A(%22Pawar%2C%20Ganesh%20N.%22)&sort=date%20desc%2C%20bibcode%20desc" target="_blank">
+	  <img height="55px" src="./assets/img/ads_logo.svg" />
+	</a>
+</div>
 
 
 <div class="row m-0 p-0" style="border-top: 1px solid #ddd; flex-direction: row-reverse;">
