--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <p>
 	I am a PhD student at Centrum Astronomiczne im. M. Kopernika PAN (<a href="https://www.camk.edu.pl/en/">CAMK</a>, <a href="https://www.ncac.torun.pl/?lang=pl&branch=world&id=17">Toruń</a>) working with <a href="https://www.ncac.torun.pl/~xysiek/en/indexen.html"> Prof. Krzysztof Hełminiak</a>. 
   My research focuses on understanding the fundamental properties of Detached Eclipsing Binary stars (DEBs). Eclipsing Binary stars (EBs) are gravitationally bounded stars that eclipses each other like our Sun-Moon eclipses. 
-  These EBs can serve as ideal Benchmark Stars for testing stellar models and calibrating data analysis algorithms in future surverys like ESA's <a href="https://www.esa.int/Science_Exploration/Space_Science/Plato">PLATO</a> misson.
+  These EBs can serve as ideal Benchmark Stars for testing stellar models and calibrating data analysis algorithms in future surveys like ESA's <a href="https://www.esa.int/Science_Exploration/Space_Science/Plato">PLATO</a> mission.
 	</p>
   
       <p>I graduated with my B.Sc. degree from the K J Somaiya College of Science & Commerce (<a href="https://kjssc.somaiya.edu.in">KJSSC</a>) and M.Sc. degree from the Department of Physics, University of Mumbai (<a href="https://www.mu.ac.in/physics" target=None>UDP</a>). 
